LMS after Auth refactor
