# storage/api-docs/api-docs.json
@@ -79,85 +79,6 @@
                 ]
             }
         },
-        "/api/categories": {
-            "get": {
-                "tags": [
-                    "categories"
-                ],
-                "description": "Get Categories",
-                "operationId": "App\\Http\\Controllers\\API\\Swagger\\CategorySwagger::index",
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "422": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {}
-                        }
-                    }
-                }
-            }
-        },
-        "/api/categories/tree": {
-            "get": {
-                "tags": [
-                    "categories"
-                ],
-                "description": "Get Categories Tree",
-                "operationId": "App\\Http\\Controllers\\API\\Swagger\\CategorySwagger::tree",
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "422": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {}
-                        }
-                    }
-                }
-            }
-        },
-        "/api/categories/{id}": {
-            "get": {
-                "tags": [
-                    "categories"
-                ],
-                "description": "Get single Categories",
-                "operationId": "App\\Http\\Controllers\\API\\Swagger\\CategorySwagger::show",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "422": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {}
-                        }
-                    }
-                }
-            }
-        },
         "/api/courses/progress": {
             "get": {
                 "tags": [
